// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button headerFooter demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <div
      class="t-list__header"
    >
      这里是 Header
    </div>
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <div
      class="t-list__footer"
    >
      这里是 Footer
    </div>
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <div
      class="t-list__header"
    >
      
       通过 Slot 插入的 Header 
      
    </div>
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <div
      class="t-list__footer"
    >
      
       通过 Slot 插入的 Footer 
      
    </div>
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button imageText demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                
                <p>
                  列表内容列表内容列表内容
                </p>
                <p>
                  列表内容列表内容列表内容
                </p>
                <p>
                  列表内容列表内容列表内容
                </p>
                <p>
                  列表内容列表内容列表内容
                </p>
                <p>
                  列表内容列表内容列表内容
                </p>
                
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button multiline demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <!---->
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button operation demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作3
              </a>
            </li>
            
          </li>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <li>
              <a
                href=""
              >
                操作1
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作2
              </a>
            </li>
            <li>
              <a
                href=""
              >
                操作3
              </a>
            </li>
            
          </li>
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <li>
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </li>
            <li>
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </li>
            <li>
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </li>
            
          </li>
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          <div
            class="t-list-item__meta"
          >
            
            <div
              class="t-list-item__meta-avatar"
            >
              <img
                src="https://tdesign.gtimg.com/list-icon.png"
              />
            </div>
            <div
              class="t-list-item__meta-content"
            >
              <h3
                class="t-list-item__meta-title"
              >
                列表主内容
              </h3>
              <p
                class="t-list-item__meta-description"
              >
                列表内容列表内容
              </p>
            </div>
            
          </div>
          
          <li
            class="t-list-item__action"
          >
            
            <li>
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </li>
            <li>
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </li>
            <li>
              <svg
                class="t-icon t-icon-check-circle-filled"
                version="1.1"
                viewBox="0 0 1024 1024"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
                  fill-opacity=".9"
                  fill-rule="evenodd"
                />
              </svg>
            </li>
            
          </li>
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Button scroll demo works fine 1`] = `
<div
  class="t-list t-size-m"
  style="max-height: 200px;"
>
  
  
  <!---->
  <ul
    class="t-list-items"
  >
    
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    <li
      class="t-list-item"
    >
      <div
        class="t-list-item-main"
      >
        
        列表内容列表内容
        
        <!---->
      </div>
    </li>
    
  </ul>
  <!---->
  
  <div
    class="t-list__load"
  >
    <!---->
  </div>
  
</div>
`;

exports[`Button size demo works fine 1`] = `
<div>
  <div
    class="t-list t-size-s t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-m t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
  <div
    style="margin-bottom: 16px;"
  />
  <div
    class="t-list t-size-l t-list--split"
  >
    
    
    <!---->
    <ul
      class="t-list-items"
    >
      
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      <li
        class="t-list-item"
      >
        <div
          class="t-list-item-main"
        >
          
          列表内容列表内容
          
          <!---->
        </div>
      </li>
      
    </ul>
    <!---->
    
    <div
      class="t-list__load"
    >
      <!---->
    </div>
    
  </div>
</div>
`;
